namespace ReDominoWPF.Interfaces
{
    interface IDomino
    {
        public int A { get; set; }
        public int B { get; set; }
    }
}
